--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
+theme: jekyll-theme-minimal
 title: Yifan Yang
 description: PhD student at MIT CSAIL
-theme: jekyll-theme-minimal
+email: yifany AT csail.mit.edu
