--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
-title: Yifan Yang
+title: Yifan Yang (杨轶凡)
 description: PhD student at MIT CSAIL
 email: yifany AT csail.mit.edu
