--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,4 @@ theme: jekyll-theme-minimal
 title: Yifan Yang (杨轶凡)
 description: PhD student at MIT CSAIL
 email: yifany AT csail.mit.edu
+logo: profile.jpg
