--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,5 @@ title: Yifan Yang (杨轶凡)
 description: PhD student at MIT CSAIL
 email: yifany AT csail.mit.edu
 logo: profile.jpg
+author:
+  googlescholar: https://scholar.google.com/citations?user=J-9nKEYAAAAJ
