[layout] restore auto dark mode

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-minimal
-color-scheme: dark
+color-scheme: auto
 title: Yifan Yang (杨轶凡)
 description: PhD student at MIT CSAIL
 logo: profile.jpg
