--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 theme: jekyll-theme-minimal
 color-scheme: auto
-title: Yifan Yang (杨轶凡)
-description: PhD student at MIT CSAIL
-logo: profile.jpg
+title: Zhen Guo (国振)
+description: PhD student at MIT EECS
+logo: profile.jpeg
 author:
-  email:         yifany AT csail.mit.edu
-  googlescholar: https://scholar.google.com/citations?user=J-9nKEYAAAAJ
-  github:        Yang-YiFan
-  linkedin:      yifan-yang-17a708155
+  email:         zguo0525 AT mit.edu
+  googlescholar: https://scholar.google.com/citations?user=P_cJy4MAAAAJ&hl=en
+  github:        zguo0525
+  linkedin:      zhen-guo-b764b6b4
