--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-minimal
 color-scheme: auto
-title: Zhen Guo (国振)
+title: Gavin Guo (国振)
 description: PhD student at MIT EECS
 logo: profile.jpeg
 author:
