--- a/_config.yml
+++ b/_config.yml
@@ -7,4 +7,4 @@ author:
   email:         zguo0525 AT mit.edu
   googlescholar: https://scholar.google.com/citations?user=P_cJy4MAAAAJ&hl=en
   github:        zguo0525
-  linkedin:      zhen-guo-b764b6b4
+  linkedin:      gavin-zhen-guo-b764b6b4/
