--- a/_config.yml
+++ b/_config.yml
@@ -8,3 +8,4 @@ author:
   googlescholar: https://scholar.google.com/citations?user=P_cJy4MAAAAJ&hl=en
   github:        zguo0525
   linkedin:      gavin-zhen-guo-b764b6b4/
+  twitter:       Zhen4good
