--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 theme: jekyll-theme-minimal
 color-scheme: auto
 title: Gavin Guo (国振)
-description: PhD student at MIT EECS
+description: Apple Intelligence, Siri
 logo: profile.jpeg
 author:
   email:         zguo0525 AT mit.edu
