Correct email format in configuration file for author contact information.

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ title: Gavin Guo (国振)
 description: Apple Intelligence, Siri
 logo: profile.jpeg
 author:
-  email:         zguo0525@berkeley.edu
+  email:         zguo0525 AT berkeley.edu
   googlescholar: https://scholar.google.com/citations?user=P_cJy4MAAAAJ&hl=en
   github:        zguo0525
   linkedin:      gavin-guo-b764b6b4/
